--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Work Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../12. my website/pages/licens&certificate.html">Licenses & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="..pages/licens&certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -285,7 +285,7 @@
                 automation systems.</p>
         </div>
         <div class="floating-icons">
-            <img src="../12. my website/images/122.png" alt="Floating Icon 1"  style="position:absolute; top:3%;  left:90%; width:80px; height:80px; border-radius:50%; box-shadow:0 4px 16px rgba(0,0,0,0.18); border:3px solid #00ffc3; object-fit:cover; z-index:2; animation: float 7s infinite alternate ease-in-out; " />
+            <img src="../images/122.png" alt="Floating Icon 1"  style="position:absolute; top:3%;  left:90%; width:80px; height:80px; border-radius:50%; box-shadow:0 4px 16px rgba(0,0,0,0.18); border:3px solid #00ffc3; object-fit:cover; z-index:2; animation: float 7s infinite alternate ease-in-out; " />
             <img src="../12. my website/images/arduino-svgrepo-com.png" alt="Floating Icon 2"       style="position:absolute; top:6%;  left:51%; width:80px; height:80px; border-radius:50%; box-shadow:0 4px 16px rgba(0,0,0,0.18); border:3px solid #00ffc3; object-fit:cover; z-index:2; animation: float 8s infinite alternate-reverse ease-in-out; " />
             <img src="../12. my website/images/cplusplus-original.png" alt="Floating Icon 3"        style="position:absolute; top:8%; left:65%; width:80px; height:80px; border-radius:50%; box-shadow:0 4px 16px rgba(0,0,0,0.18); border:3px solid #00ffc3; object-fit:cover; z-index:2; animation: float 6s infinite alternate ease-in-out; " />
             <img src="../12. my website/images/csharp-original.png" alt="Floating Icon 4"           style="position:absolute; top:22%; left:58%; width:80px; height:80px; border-radius:50%; box-shadow:0 4px 16px rgba(0,0,0,0.18); border:3px solid #00ffc3; object-fit:cover; z-index:2; animation: float 7s infinite alternate ease-in-out; " />
