--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="col-md-4 d-flex justify-content-center">
                 <a href="../12. my website/pages/project1.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 1 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/chemical.png" alt="Project Demo 1 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
                             <h5 class="card-title" style="color:#00ffc3; text-align: center;">Laser Cutting ☄️</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
@@ -365,7 +365,7 @@
             <div class="col-md-4 d-flex justify-content-center">
                 <a href="../12. my website/pages/project 2.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 2 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/elivator.png" alt="Project Demo 2 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
                             <h5 class="card-title" style="color:#00ffc3; text-align: center;">Project Demo 2</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
@@ -376,7 +376,7 @@
             <div class="col-md-4 d-flex justify-content-center">
                 <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID3" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 3 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/elivator.png" alt="Project Demo 3 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
                             <h5 class="card-title" style="color:#00ffc3; text-align: center;">Project Demo 3</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
