--- a/index.html
+++ b/index.html
@@ -352,33 +352,33 @@
         <div class="row justify-content-center g-4" id="project-cards">
             <!-- First 6 video cards (always visible) -->
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="../12. my website/pages/project1.html" target="_blank" style="text-decoration:none;">
+                <a href="pages/project1.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/chemical.png" alt="Project Demo 1 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
-                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Laser Cutting ☄️</h5>
+                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Chemical Processing 🧪</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="../12. my website/pages/project 2.html" target="_blank" style="text-decoration:none;">
+                <a href="project 2.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/elivator.png" alt="Project Demo 2 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
-                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Project Demo 2</h5>
+                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Elevator Control 🚶🏼‍➡️</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID3" target="_blank" style="text-decoration:none;">
+                <a href="project 3.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/elivator.png" alt="Project Demo 3 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/hmi test.png" alt="Project Demo 3 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
-                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Project Demo 3</h5>
+                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Hmi Testing ☝️</h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
                         </div>
                     </div>
