--- a/pages/project1.html
+++ b/pages/project1.html
@@ -123,14 +123,14 @@
     </nav>
 
     <section class="video-section">
-        <h2>Laser Cutting ☄️</h2>
+        <h2>Chemical Processing 🧪</h2>
         <!-- Example: YouTube video -->
          <!--<iframe width="894" height="503" src="https://www.youtube.com/embed/rpRKX1BfAXw?list=RDYN2_XXJVWS8" title="Gajana &quot;ගජනා&quot; by Janana feat. Pasan Katugampala (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             -->
-        <iframe src="../videos/EDGE Device/0704.mp4" width="640" height="480" allow="autoplay"></iframe>
+       <iframe src="https://drive.google.com/file/d/1KnEfkVCu3vuUM4kuNTEUBVkEIg_eaWlI/preview" width="640" height="480" allow="autoplay"></iframe>
         
         <!-- Example: Image (add more images or videos as needed) -->
-        <div class="container px-0">
+       <!-- <div class="container px-0">
             <div class="row g-3">
                 <div class="col-12 col-md-4">
                     <img src="../videos/EDGE Device/Collage_20240508_003729.jpg" alt="Project Screenshot 1" class="img-fluid rounded" style="width:100%; height: auto; object-fit:cover;">
@@ -151,7 +151,7 @@
                     <img src="../videos/EDGE Device/IMG-20240506-WA0018.jpg" alt="Project Screenshot 6" class="img-fluid rounded" style="width:100%; height: auto; object-fit:cover;">
                 </div>
             </div>
-        </div>
+        </div>-->
         <p>
             <strong>Description:</strong> <br>
             This project demonstrates my work in industrial automation, featuring real-time HMI control and monitoring. The system integrates embedded hardware, PLC programming, and a custom dashboard for seamless operation. Watch the video for a full walkthrough and technical highlights.
