--- a/pages/project 2.html
+++ b/pages/project 2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Project 1 | Ashan Fernando Portfolio</title>
+    <title>Project 2 | Ashan Fernando Portfolio</title>
     <link rel="icon" href="khgg.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
@@ -124,15 +124,14 @@
     </nav>
 
     <section class="video-section">
-        <h2>Project Demo 2</h2>
+        <h2>Elevator Control 🚶🏼‍➡️</h2>
         <!-- Example: YouTube video -->
          <!--<iframe width="894" height="503" src="https://www.youtube.com/embed/rpRKX1BfAXw?list=RDYN2_XXJVWS8" title="Gajana &quot;ගජනා&quot; by Janana feat. Pasan Katugampala (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             -->
-        <iframe src="https://drive.google.com/file/d/1d3ePkuij2S0_CFU6bGJRDR17pcAl2wzO/preview" width="640" height="480" allow="autoplay"></iframe>
-        
+       <iframe src="https://drive.google.com/file/d/1AsPNYI0cqcwKSgdDRMmsDevm2DRH_-vv/preview" width="640" height="480" allow="autoplay"></iframe>        
         <!-- Example: Image (add more images or videos as needed) -->
-        <img src="your-image1.jpg" alt="Project Screenshot" style="width:100%; border-radius:1rem; margin-bottom:1.5rem; margin-top:1rem;">
-        <img src="your-image1.jpg" alt="Project Screenshot" style="width:100%; border-radius:1rem; margin-bottom:1.5rem; margin-top:1rem;">
+        <!--<img src="your-image1.jpg" alt="Project Screenshot" style="width:100%; border-radius:1rem; margin-bottom:1.5rem; margin-top:1rem;">
+        <img src="your-image1.jpg" alt="Project Screenshot" style="width:100%; border-radius:1rem; margin-bottom:1.5rem; margin-top:1rem;">-->
         <!-- Another video example -->
         <!-- <video controls style="width:100%; border-radius:1rem; margin-bottom:1.5rem;">
             <source src="your-video.mp4" type="video/mp4">
