--- a/pages/project 2.html
+++ b/pages/project 2.html
@@ -117,8 +117,8 @@
             </div>
             <!-- Theme toggle icon (sun/moon clipart) -->
             <span class="theme-toggle-icon ms-2" id="theme-toggle" title="Toggle light/dark mode" style="font-size:1.7rem; cursor:pointer;">
-                <img id="icon-moon" src="moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
-                <img id="icon-sun" src="sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
+                <img id="icon-moon" src="../images/moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
+                <img id="icon-sun" src="../images/sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
             </span>
         </div>
     </nav>
@@ -139,7 +139,14 @@
         </video> -->
         <p>
             <strong>Description:</strong> <br>
-            This project demonstrates my work in industrial automation, featuring real-time HMI control and monitoring. The system integrates embedded hardware, PLC programming, and a custom dashboard for seamless operation. Watch the video for a full walkthrough and technical highlights.
+            Elevator Control System using Siemens S7-200 PLC
+            This project involves designing and implementing an automated elevator control system using a Siemens S7-200 Programmable Logic Controller (PLC). The system controls elevator movement through a stepper motor for precise positioning and floor-to-floor travel. The control interface includes three push buttons for floor selection and user commands, while three limit switches provide position feedback and safety interlocks to ensure the elevator stops accurately at each floor. The PLC programming handles the logic for call requests, motor direction control, speed regulation, and safety protocols, creating a functional elevator system that demonstrates industrial automation principles and PLC programming skills.
+            Key Components:
+
+            Siemens S7-200 PLC for main control logic
+            Stepper motor for precise elevator movement
+            3 push buttons for floor selection/control
+            3 limit switches for position sensing and safety
         </p>
     </section>
 
