--- a/pages/project 2.html
+++ b/pages/project 2.html
@@ -141,13 +141,13 @@
             <strong>Description:</strong> <br>
             Elevator Control System using Siemens S7-200 PLC
             This project involves designing and implementing an automated elevator control system using a Siemens S7-200 Programmable Logic Controller (PLC). The system controls elevator movement through a stepper motor for precise positioning and floor-to-floor travel. The control interface includes three push buttons for floor selection and user commands, while three limit switches provide position feedback and safety interlocks to ensure the elevator stops accurately at each floor. The PLC programming handles the logic for call requests, motor direction control, speed regulation, and safety protocols, creating a functional elevator system that demonstrates industrial automation principles and PLC programming skills.
-            <br>
-            Key Components:<br>
+            <br><br>
+            Key Components:<br><br>
 
-            Siemens S7-200 PLC for main control logic<br>
-            Stepper motor for precise elevator movement<br>
-            3 push buttons for floor selection/control<br>
-            3 limit switches for position sensing and safety<br>
+            📌Siemens S7-200 PLC for main control logic<br>
+            📌Stepper motor for precise elevator movement<br>
+            📌3 push buttons for floor selection/control<br>
+            📌3 limit switches for position sensing and safety<br>
         </p>
     </section>
 
