--- a/pages/project1.html
+++ b/pages/project1.html
@@ -154,7 +154,34 @@
         </div>-->
         <p>
             <strong>Description:</strong> <br>
-            This project demonstrates my work in industrial automation, featuring real-time HMI control and monitoring. The system integrates embedded hardware, PLC programming, and a custom dashboard for seamless operation. Watch the video for a full walkthrough and technical highlights.
+            This automated chemical processing system features dual heat elements with temperature monitoring via two temperature sensors for precise thermal control. The system includes two chemical storage tanks with dedicated pumps - one for filling operations and another for process flow. Material handling is managed through a conveyor belt system equipped with proximity and optical sensors for accurate positioning and detection. This integrated setup enables automated chemical processing with real-time monitoring and control capabilities.
+           <br><br>
+            Key Components:<br>
+
+            ✒️Thermal Control Unit<br>
+
+    📌2 Heat Elements: Provide redundant heating capacity with independent temperature control zones<br>
+    📌2 Temperature Sensors: Enable continuous thermal monitoring and feedback control for process optimization<br><br>
+
+        ✒️Chemical Storage and Pumping System<br>
+
+    📌2 Chemical Storage Tanks: Dedicated containers for different chemical types or process stages<br>
+    📌Filling Pump: Manages initial chemical loading and tank replenishment operations<br>
+    📌Process Pump: Controls chemical circulation and transfer during active processing<br><br>
+
+    ✒️Material Handling System<br>
+
+    📌Conveyor Belt: Automated transport mechanism for continuous material movement<br>
+    📌Proximity Sensor: Detects metallic objects and components for position control<br>
+    📌Optical Sensor: Provides visual detection for material presence, positioning, and quality control<br><br>
+
+    ✒️System Integration Features<br>
+
+    📌Automated process control with real-time monitoring<br>
+    📌Sensor-based feedback loops for precise operation<br>
+    📌Dual-redundancy in critical components (heating and temperature sensing)<br>
+    📌Flexible pump configuration for multiple process requirements<br>
+        
         </p>
     </section>
 
