--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
     </script>
             
             <p>I'm Ashan, an Instrumentation and Automation Engineering<br> 
-                undergraduate at the University of Colombo, Sri Lanka.<br>
+                Undergraduate at the University of Colombo, Sri Lanka.<br>
                 I specialize in industrial automation, embedded systems,<br>
                 and PCB design. My expertise includes PLC programming,<br>
                 HMI development, and digital twin technologies.<br>
                 I'm passionate about integrating hardware and<br>
-                intelligent software to build smart, scalable <br>
+                Intelligent software to build smart, scalable <br>
                 automation systems.</p>
         </div>
         <div class="floating-icons">
@@ -374,7 +374,7 @@
                 </a>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="project 3.html" target="_blank" style="text-decoration:none;">
+                <a href="page/project 3.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/hmi test.png" alt="Project Demo 3 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
