--- a/pages/project 3.html
+++ b/pages/project 3.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="maintain-container">
-        <img src= "images/maintains.gif" alt="Under Maintenance">
+        <img src= "../images/maintains.gif" alt="Under Maintenance">
         <h1>Page Under Maintenance</h1>
         <p>This page is currently being updated.<br>
         Please check back soon!</p>
