--- a/index.html
+++ b/index.html
@@ -510,6 +510,8 @@
                     <a href="mailto:ashanmzzz@gmail.com"><img src="images/gmail-svgrepo-com.svg" alt="Email Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
                     <a href="https://api.whatsapp.com/send/?phone=94769477318&text&type=phone_number&app_absent=0"><img src="images/whatsapp-whats-app-svgrepo-com.svg" alt="Phone Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
                     <a href="https://www.linkedin.com/in/ashan-fernando98"><img src="images/linkedin-svgrepo-com.svg" alt="LinkedIn Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
+                    <a href="pages/project 3.html"><img src="images/resume.webp" alt="LinkedIn Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
+
                 </div>
             </div>
         </div>
