--- a/index.html
+++ b/index.html
@@ -506,11 +506,11 @@
             <div class="card bg-dark text-white" style="border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3); width:100%;">
                 <div class="card-body text-center">
                     <h2 class="card-title" style="color:#00ffc3;">Contact</h2>
-                    <a href="tel:+94769477318"><img src="images/Google_Contacts_icon.svg" alt="Contact Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
-                    <a href="mailto:ashanmzzz@gmail.com"><img src="images/gmail-svgrepo-com.svg" alt="Email Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
-                    <a href="https://api.whatsapp.com/send/?phone=94769477318&text&type=phone_number&app_absent=0"><img src="images/whatsapp-whats-app-svgrepo-com.svg" alt="Phone Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
-                    <a href="https://www.linkedin.com/in/ashan-fernando98"><img src="images/linkedin-svgrepo-com.svg" alt="LinkedIn Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
-                    <a href="pages/project 3.html"><img src="images/resume.webp" alt="LinkedIn Icon" style="width: 50px; height: 50px; vertical-align: middle;"></a>
+                    <a href="tel:+94769477318" class="mx-3"><img src="images/Google_Contacts_icon.svg" alt="Contact Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
+                    <a href="mailto:ashanmzzz@gmail.com" class="mx-3"><img src="images/gmail-svgrepo-com.svg" alt="Email Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
+                    <a href="https://api.whatsapp.com/send/?phone=94769477318&text&type=phone_number&app_absent=0" class="mx-3"><img src="images/whatsapp-whats-app-svgrepo-com.svg" alt="Phone Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
+                    <a href="https://www.linkedin.com/in/ashan-fernando98" class="mx-3"><img src="images/linkedin-svgrepo-com.svg" alt="LinkedIn Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
+                    <a href="pages/project 3.html" class="mx-3"><img src="images/resume.webp" alt="LinkedIn Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
 
                 </div>
             </div>
