--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <a href="mailto:ashanmzzz@gmail.com" class="mx-3"><img src="images/gmail-svgrepo-com.svg" alt="Email Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
                     <a href="https://api.whatsapp.com/send/?phone=94769477318&text&type=phone_number&app_absent=0" class="mx-3"><img src="images/whatsapp-whats-app-svgrepo-com.svg" alt="Phone Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
                     <a href="https://www.linkedin.com/in/ashan-fernando98" class="mx-3"><img src="images/linkedin-svgrepo-com.svg" alt="LinkedIn Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
-                    <a href="pages/project 3.html" class="mx-3"><img src="images/resume.webp" alt="LinkedIn Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
+                    <a href="https://www.canva.com/design/DAGrtMFzH_4/6zxxvgz1heXY1sZbRkVXNg/view" class="mx-3"><img src="images/resume.webp" alt="LinkedIn Icon" style="width: 25px; height: 25px; vertical-align: middle;"></a>
 
                 </div>
             </div>
