--- a/pages/resume.html
+++ b/pages/resume.html
@@ -221,8 +221,8 @@
                 </ul>
             </div>
             <span class="theme-toggle-icon ms-2" id="theme-toggle" title="Toggle light/dark mode" style="font-size:1.7rem; cursor:pointer;">
-            <img id="icon-moon" src="../images/moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
-            <img id="icon-sun" src="../images/sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
+            <img id="icon-moon" src="images/moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
+            <img id="icon-sun" src="/images/sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
         </span>
         </div>
     </nav>
@@ -242,7 +242,13 @@
             <svg width="48" height="48" style="top: 85%; left: 70%; animation-delay: 11s;"><circle cx="24" cy="24" r="20" stroke="#fff" stroke-width="2" fill="none"/><circle cx="24" cy="24" r="6" stroke="#fff" stroke-width="2" fill="none"/></svg>
             <svg width="48" height="48" style="top: 90%; left: 80%; animation-delay: 12s;"><circle cx="24" cy="24" r="20" stroke="#00ffc3" stroke-width="2" fill="none"/><circle cx="24" cy="24" r="6" stroke="#00ffc3" stroke-width="2" fill="none"/></svg>
         </div>
-    
+    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+     border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https://www.canva.com/design/DAGrtMFzH_4/6zxxvgz1heXY1sZbRkVXNg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+      </iframe>
+    </div>
 
 
 
