--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashan Fernando Portfolio</title>
-    <link href="../12. my website/images/icon.png" rel="icon" type="image/png">
+    <link href="../images/icon.png" rel="icon" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
     <style>
@@ -205,7 +205,7 @@
         <div class="container-fluid px-0">
             <!-- Profile picture on the left -->
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="images/icon.png" alt="Profile" style="width:40px; height:40px; border-radius:50%; object-fit:cover; margin-right:10px;color:#030303;">
+                <img src="../images/icon.png" alt="Profile" style="width:40px; height:40px; border-radius:50%; object-fit:cover; margin-right:10px;color:#030303;">
                 <span class="d-none d-lg-inline" style="font-weight:700; color:#00ffc3;">Ashan</span>
             </a>
             <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -213,16 +213,15 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
                 <ul class="navbar-nav flex-column flex-lg-row mx-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Work Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../12. my website/pages/licens&certificate.html">Licenses & Certifications</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
             <span class="theme-toggle-icon ms-2" id="theme-toggle" title="Toggle light/dark mode" style="font-size:1.7rem; cursor:pointer;">
-            <img id="icon-moon" src="images/moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
-            <img id="icon-sun" src="/images/sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
+            <img id="icon-moon" src="../images/moon.svg" alt="Moon" style="width:32px; height:32px; display:inline; vertical-align:middle;">
+            <img id="icon-sun" src="../images/sun.svg" alt="Sun" style="width:32px; height:32px; display:none; vertical-align:middle;">
         </span>
         </div>
     </nav>
