--- a/pages/resume.html
+++ b/pages/resume.html
@@ -215,7 +215,8 @@
                 <ul class="navbar-nav flex-column flex-lg-row mx-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Work Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/licens&certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
