--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Work Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/licens&certificate.html">Licenses & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/licens_certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
