--- a/pages/project1.html
+++ b/pages/project1.html
@@ -99,7 +99,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom d-flex align-items-center justify-content-between">
         <div class="container-fluid px-0">
             <!-- Profile picture on the left -->
-            <a class="navbar-brand d-flex align-items-center" href="../index.html#">
+            <a class="navbar-brand d-flex align-items-center" href="../index.html">
                 <img src="../images/icon.png" alt="Profile" style="width:40px; height:40px; border-radius:50%; object-fit:cover; margin-right:10px;">
                 <span class="d-none d-lg-inline" style="font-weight:700; color:#00ffc3;">Ashan</span>
             </a>
@@ -111,7 +111,7 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#projects">Work Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/licens_certificate.html">Licenses & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../licens_certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
