--- a/pages/project1.html
+++ b/pages/project1.html
@@ -111,7 +111,7 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#projects">Work Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../licens_certificate.html">Licenses & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="licens_certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
