--- a/pages/resume.html
+++ b/pages/resume.html
@@ -242,6 +242,8 @@
             <svg width="48" height="48" style="top: 85%; left: 70%; animation-delay: 11s;"><circle cx="24" cy="24" r="20" stroke="#fff" stroke-width="2" fill="none"/><circle cx="24" cy="24" r="6" stroke="#fff" stroke-width="2" fill="none"/></svg>
             <svg width="48" height="48" style="top: 90%; left: 80%; animation-delay: 12s;"><circle cx="24" cy="24" r="20" stroke="#00ffc3" stroke-width="2" fill="none"/><circle cx="24" cy="24" r="6" stroke="#00ffc3" stroke-width="2" fill="none"/></svg>
         </div>
+    <h2 style="color:#00ffc3; text-align:center; margin-top:2rem; margin-bottom:1rem;">My Resume</h2>
+
     <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
      padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
      border-radius: 8px; will-change: transform;">
