--- a/pages/project 2.html
+++ b/pages/project 2.html
@@ -109,9 +109,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
                 <ul class="navbar-nav flex-column flex-lg-row mx-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link" href="../index.html#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Work Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="licens_certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
