--- a/pages/project 2.html
+++ b/pages/project 2.html
@@ -154,6 +154,13 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+    
+<footer class="footer-custom text-center py-4 mt-5">
+    <div>
+        <span style="color:#00ffc3; font-weight:600;">&copy; 2025 Ashan Fernando</span>
+        
+          </div>
+</footer>
     <!-- Add this script before </body> to enable light/dark mode switching -->
     <script>
     // Theme toggle with localStorage and icon switch
