--- a/index.html
+++ b/index.html
@@ -521,6 +521,13 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+    
+<footer class="footer-custom text-center py-4 mt-5">
+    <div>
+        <span style="color:#00ffc3; font-weight:600;">&copy; 2025 Ashan Fernando</span>
+        
+          </div>
+</footer>
     <script>
         // Theme toggle with localStorage and icon switch
     const themeToggle = document.getElementById('theme-toggle');
