--- a/pages/project1.html
+++ b/pages/project1.html
@@ -154,38 +154,12 @@
                 </div>
             </div>
         </div>-->
-        <p>
-            <strong>Description:</strong> <br>
-            This automated chemical processing system features dual heat elements with temperature monitoring via two temperature sensors for precise thermal control. The system includes two chemical storage tanks with dedicated pumps - one for filling operations and another for process flow. Material handling is managed through a conveyor belt system equipped with proximity and optical sensors for accurate positioning and detection. This integrated setup enables automated chemical processing with real-time monitoring and control capabilities.
-           <br><br>
-            Key Components:<br>
-
-            ✒️Thermal Control Unit<br>
-
-    📌2 Heat Elements: Provide redundant heating capacity with independent temperature control zones<br>
-    📌2 Temperature Sensors: Enable continuous thermal monitoring and feedback control for process optimization<br><br>
-
-        ✒️Chemical Storage and Pumping System<br>
-
-    📌2 Chemical Storage Tanks: Dedicated containers for different chemical types or process stages<br>
-    📌Filling Pump: Manages initial chemical loading and tank replenishment operations<br>
-    📌Process Pump: Controls chemical circulation and transfer during active processing<br><br>
-
-    ✒️Material Handling System<br>
-
-    📌Conveyor Belt: Automated transport mechanism for continuous material movement<br>
-    📌Proximity Sensor: Detects metallic objects and components for position control<br>
-    📌Optical Sensor: Provides visual detection for material presence, positioning, and quality control<br><br>
-
-    ✒️System Integration Features<br>
-
-    📌Automated process control with real-time monitoring<br>
-    📌Sensor-based feedback loops for precise operation<br>
-    📌Dual-redundancy in critical components (heating and temperature sensing)<br>
-    📌Flexible pump configuration for multiple process requirements<br>
         
-        </p>
     </section>
+    <div style="max-width:800px; margin:auto;">
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vT6uJA8BsBxWMdrowtlNpJmLUVlTwaZ8m99P2HBMH32PVlM7Iwoqu4mI13i8sBQr5HqMJ7Rq-2ovF5p/pub?embedded=true"
+        width="100%" height="600" style="border:1px solid #00ffc3; background: #00ffc3;  border-radius:1rem;"></iframe>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
     
