--- a/pages/licens_certificate.html
+++ b/pages/licens_certificate.html
@@ -110,7 +110,7 @@
                 <ul class="navbar-nav flex-column flex-lg-row mx-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="../index.html#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html#projects">Work Experience</a></li>
                     <li class="nav-item"><a class="nav-link active" href="licens&certificate.html">Licenses & Certifications</a></li>
                     <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
                 </ul>
