--- a/pages/Counters and timers.html
+++ b/pages/Counters and timers.html
@@ -124,12 +124,11 @@
     </nav>
 
     <section class="video-section">
-        <h2>Hmi Testing ☝️</h2>
+        <h2>Counters and timers⏲️</h2>
         <!-- Example: YouTube video -->
          <!--<iframe width="894" height="503" src="https://www.youtube.com/embed/rpRKX1BfAXw?list=RDYN2_XXJVWS8" title="Gajana &quot;ගජනා&quot; by Janana feat. Pasan Katugampala (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             -->
-      <iframe src="https://drive.google.com/file/d/1-ovEd3vkbk93nBL-obWntIgSA0I_q8Cx/preview" width="640" height="480" allow="autoplay"></iframe> 
-        
+      <iframe src="https://drive.google.com/file/d/1J-8vmW0niqDf5OCzdBoaX8bLB-VYqQDk/preview" width="640" height="480" allow="autoplay"></iframe>  
         <!-- Example: Image (add more images or videos as needed) -->
        <!-- <div class="container px-0">
             <div class="row g-3">
@@ -156,7 +155,7 @@
         
     </section>
     <div style="max-width:800px; margin:auto;">
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTZZXOulmcJQOMrr33hu-2G09hrFkiqTmYT_YhEnA6CxOn74OQZfhZzyq99HpztTYpYMGvnrJVWvVo2/pub?embedded=true"
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vTtXRunwfycMlnnnBuvvgOt2P8xlvRjOEhftoQ-BYsgINip8WSexGfsG8W6Owcb0qg0e-nUjyOhylbt/pub?embedded=true"
         width="100%" height="600" style="border:1px solid #00ffc3; background: #00ffc3;  border-radius:1rem;"></iframe>
     </div>
 
