--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="col-md-4 d-flex justify-content-center">
                 <a href="pages/Counters and timers" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 4 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/counters.png" alt="Project Demo 4 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
                             <h5 class="card-title" style="color:#00ffc3; text-align: center;">Counters and timers⏲️
 </h5>
