--- a/pages/licens_certificate.html
+++ b/pages/licens_certificate.html
@@ -131,6 +131,14 @@
             <div class="card-body">
                 <h2 class="card-title" style="color:#00ffc3;">Certificates <img src="../images/certificate.gif" alt="Certificate Icon" style="width: 40px; height: 40px; vertical-align:middle;"></h2>
                 <div class="row g-3">
+
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="solisplc.html" target="_blank" style="text-decoration:none;">
+                            <img src="../Certificate/certficate1.JPG" alt="Certificate 1" class="img-fluid rounded mb-2" style="width:100%; object-fit:cover; cursor:pointer;">
+                            <p class="mb-0" style="color:#00ffc3; text-align: center;">An Introduction to the PLCnext Platform</p>
+                        </a>
+                    </div>
+                    
                     <div class="col-12 col-md-6 col-lg-4">
                         <a href="https://learn.nvidia.com/certificates?id=qeKYS2d1Q4mFe23r9ac_gg" target="_blank" style="text-decoration:none;">
                             <img src="../Certificate/certficate1.JPG" alt="Certificate 1" class="img-fluid rounded mb-2" style="width:100%; object-fit:cover; cursor:pointer;">
