--- a/pages/licens_certificate.html
+++ b/pages/licens_certificate.html
@@ -134,7 +134,7 @@
 
                     <div class="col-12 col-md-6 col-lg-4">
                         <a href="solisplc.html" target="_blank" style="text-decoration:none;">
-                            <img src="../Certificate/certficate1.JPG" alt="Certificate 1" class="img-fluid rounded mb-2" style="width:100%; object-fit:cover; cursor:pointer;">
+                            <img src="../Certificate/solisplc.jpg" alt="Certificate 1" class="img-fluid rounded mb-2" style="width:100%; object-fit:cover; cursor:pointer;">
                             <p class="mb-0" style="color:#00ffc3; text-align: center;">An Introduction to the PLCnext Platform</p>
                         </a>
                     </div>
