--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <div class="row justify-content-center g-4" id="project-cards">
             <!-- First 6 video cards (always visible) -->
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="pages/project1.html" target="_blank" style="text-decoration:none;">
+                <a href="pages/Chemical.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/chemical.png" alt="Project Demo 1 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
