--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
             <!-- First 6 video cards (always visible) -->
 
          <div class="col-md-4 d-flex justify-content-center">
-                <a href="pages/project 3.html" target="_blank" style="text-decoration:none;">
+                <a href="pages/chemicals7400.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
-                        <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 5 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
+                        <img class="card-img-top" src="images/chemical s7400.png" alt="Project Demo 5 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
-                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Project Demo 5</h5>
+                            <h5 class="card-title" style="color:#00ffc3; text-align: center;">Chemical Processing 🧪siemens s7 400 </h5>
                             <p class="card-text" style="color:#ffffff;">A quick look at my work in action.</p>
                         </div>
                     </div>
