--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <!-- First 6 video cards (always visible) -->
 
          <div class="col-md-4 d-flex justify-content-center">
-                <a href="pages/chemicals7400.html" target="_blank" style="text-decoration:none;">
+                <a href="pages/S7400.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/chemical s7400.png" alt="Project Demo 5 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
