--- a/pages/EDGE.html
+++ b/pages/EDGE.html
@@ -124,7 +124,7 @@
     </nav>
 
     <section class="video-section">
-        <h2>Chemical Processing 🧪 S7 400 PLC</h2>
+        <h2>EDGE Device 📲 </h2>
         <!-- Example: YouTube video -->
          <!--<iframe width="894" height="503" src="https://www.youtube.com/embed/rpRKX1BfAXw?list=RDYN2_XXJVWS8" title="Gajana &quot;ගජනා&quot; by Janana feat. Pasan Katugampala (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             -->
