--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
             </div>
             <!-- Full image on the left -->
             <div class="col-lg-5 mb-4 mb-lg-0 order-1 order-lg-1 d-flex justify-content-center">
-                <!--<img src="images/ashnew.png" alt="Ashan Full About Me" style="width:100%; max-width:7000px; height:auto; border-radius:1.2rem; object-fit:cover;">
-            ...--></div>
+                <img src="images/images/ashanpotfolip.png" alt="Ashan Full About Me" style="width:100%; max-width:7000px; height:auto; border-radius:1.2rem; object-fit:cover;">
+            </div>
         </div>
     </section>
 
