--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </a>
             </div>
         </div>
-        <!-- Hidden extra video cards -->
+        <!-- Hidden extra video cards --><br><br>
         <div id="more-projects" style="display:none;">
             <div class="row justify-content-center g-4" id="project-cards">
             <!-- First 6 video cards (always visible) -->
