--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 </a>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="pages/project 3.html" target="_blank" style="text-decoration:none;">
+                <a href="pages/3d.html" target="_blank" style="text-decoration:none;">
                     <div class="card bg-dark text-white" style="width: 20rem; border-radius: 1.2rem; box-shadow: 0 4px 24px 0 rgba(0,0,0,0.3);">
                         <img class="card-img-top" src="images/maintains.gif" alt="Project Demo 6 Thumbnail" style="border-top-left-radius: 1.2rem; border-top-right-radius: 1.2rem;">
                         <div class="card-body">
