--- a/pages/3d.html
+++ b/pages/3d.html
@@ -41,7 +41,7 @@
 <body>
     <div style="width:100%;display:flex;justify-content:center;align-items:center;min-height:100vh;background:#232b36;">
       <model-viewer 
-        src="3D file/Untitled.glb" 
+        src="3D files/Untitled.glb" 
         alt="3D Model" 
         camera-controls 
         auto-rotate 
